--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "sifchain": "file:gen/api"
   },
   "devDependencies": {
+    "@nestjs/core": "^7.6.17",
     "@openapitools/openapi-generator-cli": "^2.2.8",
     "tslint": "^6.1.3",
     "typescript": "^3.9.9"
