--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "scripts": {
     "nuke-api": "rm -rf gen/api && openapi-generator-cli generate -i swagger.yaml -g typescript-axios -o gen/api --config api.json && cd gen/api && npm install && npm run build",
-    "start": "tsc && cp sample.env ./dist && node dist/index.js"
+    "start": "tsc && cp sample.env ./dist && node dist/index.js",
+    "build": "tsc && cp sample.env ./dist",
+    "test": "jest"
   },
   "dependencies": {
     "@cosmjs/crypto": "^0.25.3",
@@ -13,6 +15,9 @@
   "devDependencies": {
     "@nestjs/core": "^7.6.17",
     "@openapitools/openapi-generator-cli": "^2.2.8",
+    "@types/jest": "^26.0.23",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.5.6",
     "tslint": "^6.1.3",
     "typescript": "^3.9.9"
   }
