--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@types/node": "^15.3.1",
     "dotenv": "^9.0.2",
     "ethers": "^5.3.1",
-    "sifchain": "file:gen/api"
+    "sifchain": "file:gen/api",
+    "web3": "^1.3.6"
   },
   "devDependencies": {
     "@nestjs/core": "^7.6.17",
