--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "dotenv": "^9.0.2",
     "ethers": "^5.3.1",
     "sifchain": "file:gen/api",
-    "web3": "^1.3.6"
+    "web3": "^1.3.6",
   },
   "devDependencies": {
     "@nestjs/core": "^7.6.17",
     "@openapitools/openapi-generator-cli": "^2.2.8",
+    "@openzeppelin/test-helpers": "^0.5.11",
     "@types/jest": "^26.0.23",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.6",
