--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"main": "index.js",
 	"scripts": {
-		"nuke-api": "rm -rf gen/api && openapi-generator-cli generate -i swagger.yaml -g typescript-axios -o gen/api --config api.json && cd gen/api && npm install && npm run build",
+		"nuke-api": "rm -rf gen/api-next && openapi-generator-cli generate -i swagger.yaml -g typescript-axios -o gen/api-next --config api.json && rm -rf gen/api && mv gen/api-next gen/api && cd gen/api && npm install && npm run build",
 		"start": "tsc && cp sample.env ./dist && node dist/index.js",
 		"build": "tsc && cp sample.env ./dist",
 		"test": "jest"
@@ -11,9 +11,9 @@
 		"@cosmjs/launchpad": "^0.25.3",
 		"@cosmjs/stargate": "^0.25.5",
 		"@types/node": "^15.3.1",
+		"sifchain": "file:./gen/api",
 		"dotenv": "^9.0.2",
 		"ethers": "^5.3.1",
-		"sifchain": "file:gen/api",
 		"web3": "^1.3.6"
 	},
 	"devDependencies": {
