--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"main": "index.js",
 	"scripts": {
 		"nuke-api": "rm -rf gen/api-next && openapi-generator-cli generate -i swagger.yaml -g typescript-axios -o gen/api-next --config api.json && rm -rf gen/api && mv gen/api-next gen/api && cd gen/api && npm install && npm run build",
+		"dev": "ts-node-dev --respawn --transpile-only ./index.ts",
 		"start": "tsc && cp sample.env ./dist && node dist/index.js",
 		"build": "tsc && cp sample.env ./dist",
 		"test": "jest"
@@ -11,9 +12,9 @@
 		"@cosmjs/launchpad": "^0.25.3",
 		"@cosmjs/stargate": "^0.25.5",
 		"@types/node": "^15.3.1",
-		"sifchain": "file:./gen/api",
 		"dotenv": "^9.0.2",
 		"ethers": "^5.3.1",
+		"sifchain": "file:./gen/api",
 		"web3": "^1.3.6"
 	},
 	"devDependencies": {
@@ -22,6 +23,7 @@
 		"@types/jest": "^26.0.23",
 		"jest": "^26.6.3",
 		"ts-jest": "^26.5.6",
+		"ts-node-dev": "^1.1.8",
 		"tslint": "^6.1.3",
 		"typescript": "^3.9.9"
 	}
