--- a/sample.env
+++ b/sample.env
@@ -1,3 +1,3 @@
-MNEMONIC="surround miss nominee dream gap cross assault thank captain prosper drop duty group candy wealth weather scale put"
-REST_API="https://data.sifchain.finance/beta"
-INFURA_URL=
+ETH_MNEMONIC=
+SIF_MNEMONIC=
+INFURA_SECRET=
