--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@types/node": "^15.3.1",
 		"dotenv": "^9.0.2",
 		"ethers": "^5.3.1",
+		"long": "^4.0.0",
 		"sifchain": "file:./gen/api",
 		"web3": "^1.3.6"
 	},
