update configs from testnet to mainnet. and general code cleaning

--- a/sample.env
+++ b/sample.env
@@ -1,3 +1,14 @@
-ETH_MNEMONIC=
-SIF_MNEMONIC=
 INFURA_SECRET=
+INFURA_PROJECT_ID=
+
+SIF_MNEMONIC=
+ETH_MNEMONIC=
+
+AKASH_MNEMONIC=
+COSMOS_MNEMONIC=
+CRO_MNEMONIC=
+IAA_MNEMONIC=
+OSMO_MNEMONIC=
+PERSISTENCE_MNEMONIC=
+REGEN_MNEMONIC=
+SENT_MNEMONIC=
